# mcp-pdfco

./: .env.example  .gitignore  .mcpbignore  ARCHITECTURE_PROMPT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  manifest.json  mpak.json  pyproject.toml
.github/workflows/: build-bundle.yml  ci.yaml
e2e/: test_e2e_server.py
src/mcp_pdfco/: SKILL.md  __init__.py  __main__.py  api_client.py  api_models.py  server.py
tests/: __init__.py  test_api_client.py  test_server.py
